test change time tick

--- a/2.md
+++ b/2.md
@@ -1,17 +1,7 @@
-/*
- *                               POK header
- *
- * The following file is a part of the POK project. Any modification should
- * be made according to the POK licence. You CANNOT use this file or a part
- * of a file for your own project.
- *
- * For more information on the POK licence, please see our LICENCE FILE
- *
- * Please follow the coding guidelines described in doc/CODING_GUIDELINES
- *
- *                                      Copyright (c) 2007-2022 POK team
- */
+# 修改的部分
 
+这里首先给出在什么地方修改了 kernel/arch/x86/x86-qemu/pit.c
+```c
 #include <arch/x86/interrupt.h>
 #include <arch/x86/ioports.h>
 #include <assert.h>
@@ -76,3 +66,19 @@ pok_ret_t pok_x86_qemu_timer_init() {
 
   return POK_ERRNO_OK;
 }
+```
+
+这是因为由于pok本身的版本的更新了，所以修改和学长之前的修改并不是完全相同，但是这个现在应该也可以用，剩下的修改就和学长的修改一摸一样了。
+
+接着是打印信息的修改，这里有点过于粗暴，把原来的全部注释掉了，并且在唯一的一个调度函数 sched-func 后打印了部分信息，这里首先给出打印信息的部分 
+```c
+if(elected == IDLE_THREAD)
+    {
+        printf("thread: IDLE, time: %lld\n", POK_GETTICK());
+    }
+    else
+    {
+        printf("thread: %d, time: %lld\n", elected, POK_GETTICK());
+    }
+```
+随后是注释部分在 pok_sched_part_rr / pok_sched_part_static / pok_sched_part_rms 中直接注释掉了全部的打印信息
